reorganized using class Main, finish ex04. last add replace function.

--- a/cppModule01/ex04/Makefile
+++ b/cppModule01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: eduaserr < eduaserr@student.42malaga.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/26 16:18:40 by eduaserr          #+#    #+#              #
-#    Updated: 2025/08/25 18:37:13 by eduaserr         ###   ########.fr        #
+#    Updated: 2025/08/26 21:33:25 by eduaserr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,10 +15,10 @@ CC		= g++
 CFLAGS	= -Wall -Wextra -Werror -g -std=c++98
 
 SRC		= main.cpp
-SRCS	=
+SRCS	= src/createFile.cpp
 
 ### OBJS ###
-OBJS	= $(SRC:.cpp=.o)
+OBJS	= $(SRC:.cpp=.o) $(SRCS:.cpp=.o)
 
 ### RULES ###
 all : $(NAME)
@@ -36,7 +36,7 @@ clean:
 	@echo "clearing...🧹"
 
 fclean: clean
-	@$(RM) $(NAME)
+	@$(RM) $(NAME) *.txt filename.replace
 	@echo "clearing executables"
 
 re: fclean all
